[package]
name = "socket-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ['attributes']}
parking_lot = "0.11.1"
async-tungstenite = "0.14.0"
lazy_static = "1.4.0"
uuid = { version = "0.8.2", features = ['v4']}
portpicker = "0.1.1"
futures = "0.3.16"
structopt = "0.3.22"


[[bin]]
name = "socket-server"
